# minigif

./: CMakeLists.txt  component.mk
example/: .gitignore  CMakeLists.txt  main.c
inc/: minigif.h
include/: minigif.h  minigif_structs.h
src/: minigif.c  minigif_lzw.c
src/inc/: minigif_lzw.h  minigif_structs.h
